<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home_24"
        android:title="@string/nav_home" />

    <item
        android:id="@+id/categoryFragment"
        android:icon="@drawable/ic_grid_view_24"
        android:title="@string/nav_categories" />

    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/ic_search_24"
        android:title="@string/nav_search" />

    <item
        android:id="@+id/bookmarkFragment"
        android:icon="@drawable/ic_bookmark_24"
        android:title="@string/nav_saved" />

    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_settings_24"
        android:title="@string/nav_settings" />

    <item
        android:id="@+id/settingsFragment"
        android:title="Settings"
        android:icon="@android:drawable/ic_menu_preferences"/>

</menu>
